--- a/GFN_training.ipynb
+++ b/GFN_training.ipynb
@@ -279,9 +279,8 @@
     "        \n",
     "\n",
     "logger = VisLogger(\n",
-    "    path=\"./logs/\",\n",
-    "    top_n=15,\n",
-    "    fn_state_to_image=imagefn,\n",
+    "    path=\"./seth1\",\n",
+    "    s0_included = True\n",
     "    fn_compute_features=featurefn,\n",
     "    fn_state_to_text=textfn,\n",
     ")"
