Cleanup: new seh data, bugfixes logger

--- a/GFN_training.ipynb
+++ b/GFN_training.ipynb
@@ -279,7 +279,7 @@
     "        \n",
     "\n",
     "logger = VisLogger(\n",
-    "    #path=\"./seh1\",\n",
+    "    #path=\"./seh_small\",\n",
     "    s0_included = True,\n",
     "    fn_compute_features=featurefn,\n",
     "    fn_state_to_text=textfn,\n",
@@ -312,7 +312,7 @@
     "        tl = len(t[\"traj\"])\n",
     "        batch_idx += [j]*tl\n",
     "        for s in t[\"traj\"]:\n",
-    "            states.append(s[0])\n",
+    "            states.append(ctx.graph_to_obj(s[0]))\n",
     "        logprobs_bw.append(t[\"bck_logprobs\"])\n",
     "        # shift to next one\n",
     "        logprobs_fw.append(torch.cat((torch.Tensor([0]), t[\"fwd_logprobs\"][:-1])))\n",
@@ -323,7 +323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "5deddd774150a3b0",
    "metadata": {
     "ExecuteTime": {
@@ -335,12 +335,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "bf9e39f99f1b4d24809ae5bfc1be9608",
+       "model_id": "38af2e5f27084594be8cdc5fb8efbe23",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "  0%|          | 0/9 [00:00<?, ?it/s]"
+       "  0%|          | 0/10 [00:00<?, ?it/s]"
       ]
      },
      "metadata": {},
@@ -350,32 +350,328 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(2159,)\n",
-      "2159\n",
+      "(1505,)\n",
+      "1505\n",
       "torch.Size([100])\n",
       "100\n",
-      "torch.Size([2159])\n",
-      "torch.Size([2159])\n"
-     ]
-    },
-    {
-     "ename": "AttributeError",
-     "evalue": "'Graph' object has no attribute 'GetNumAtoms'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[8], line 46\u001b[0m\n\u001b[1;32m     35\u001b[0m \u001b[38;5;28mprint\u001b[39m(logprobs_bw\u001b[38;5;241m.\u001b[39mshape)\n\u001b[1;32m     37\u001b[0m logger\u001b[38;5;241m.\u001b[39mlog(\n\u001b[1;32m     38\u001b[0m     batch_idx\u001b[38;5;241m=\u001b[39mbatch_idx,\n\u001b[1;32m     39\u001b[0m     states\u001b[38;5;241m=\u001b[39mstates,\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m     44\u001b[0m     logprobs_forward \u001b[38;5;241m=\u001b[39m logprobs_fw\n\u001b[1;32m     45\u001b[0m )\n\u001b[0;32m---> 46\u001b[0m \u001b[43mlogger\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mwrite_to_db\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n",
-      "File \u001b[0;32m~/AI/Master/pilot/logger.py:297\u001b[0m, in \u001b[0;36mVisLogger.write_to_db\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m    295\u001b[0m feature_cols \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mNone\u001b[39;00m\n\u001b[1;32m    296\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mfn_compute_features \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[0;32m--> 297\u001b[0m     features, features_valid \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mfn_compute_features\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;28;43mlist\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43mdata\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mstates\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m)\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    298\u001b[0m     data[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mfeatures_valid_computed\u001b[39m\u001b[38;5;124m\"\u001b[39m] \u001b[38;5;241m=\u001b[39m features_valid\n\u001b[1;32m    299\u001b[0m     feature_cols \u001b[38;5;241m=\u001b[39m [\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mcomputed_features_\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mi\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m \u001b[38;5;28;01mfor\u001b[39;00m i \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(features\u001b[38;5;241m.\u001b[39mshape[\u001b[38;5;241m1\u001b[39m])]\n",
-      "Cell \u001b[0;32mIn[5], line 37\u001b[0m, in \u001b[0;36mfeaturefn\u001b[0;34m(mol_list, radius, n_bits)\u001b[0m\n\u001b[1;32m     34\u001b[0m success_mask \u001b[38;5;241m=\u001b[39m [\u001b[38;5;28;01mFalse\u001b[39;00m] \u001b[38;5;241m*\u001b[39m \u001b[38;5;28mlen\u001b[39m(mol_list)\n\u001b[1;32m     36\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m i, mol \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28menumerate\u001b[39m(mol_list):\n\u001b[0;32m---> 37\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m mol \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m \u001b[38;5;129;01mor\u001b[39;00m \u001b[43mmol\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mGetNumAtoms\u001b[49m() \u001b[38;5;241m==\u001b[39m \u001b[38;5;241m0\u001b[39m:\n\u001b[1;32m     38\u001b[0m         \u001b[38;5;28;01mcontinue\u001b[39;00m  \u001b[38;5;66;03m# leave as zero and False\u001b[39;00m\n\u001b[1;32m     39\u001b[0m     \u001b[38;5;28;01mtry\u001b[39;00m:\n",
-      "\u001b[0;31mAttributeError\u001b[0m: 'Graph' object has no attribute 'GetNumAtoms'"
+      "torch.Size([1505])\n",
+      "torch.Size([1505])\n",
+      "Building initial graph...\n",
+      "Initial graph built successfully\n",
+      "\n",
+      "=== Graph Statistics ===\n",
+      "Total nodes: 866\n",
+      "Total edges: 915\n",
+      "Node types:\n",
+      "  final: 99\n",
+      "  standard: 766\n",
+      "  start: 1\n",
+      "\n",
+      "Creating indexes...\n",
+      "\n",
+      "Starting truncation...\n",
+      "Step 1: Identifying removable nodes...\n",
+      "  Found 738 removable nodes\n",
+      "Step 2: Creating successor lookup table...\n",
+      "Step 3: Bypassing chains...\n",
+      "  Iteration 1: Updating 84 edges...\n",
+      "  Iteration 2: Updating 77 edges...\n",
+      "  Iteration 3: Updating 64 edges...\n",
+      "  Iteration 4: Updating 60 edges...\n",
+      "  Iteration 5: Updating 51 edges...\n",
+      "  Iteration 6: Updating 49 edges...\n",
+      "  Iteration 7: Updating 46 edges...\n",
+      "  Iteration 8: Updating 44 edges...\n",
+      "  Iteration 9: Updating 40 edges...\n",
+      "  Iteration 10: Updating 40 edges...\n",
+      "  Iteration 11: Updating 38 edges...\n",
+      "  Iteration 12: Updating 37 edges...\n",
+      "  Iteration 13: Updating 36 edges...\n",
+      "  Iteration 14: Updating 36 edges...\n",
+      "  Iteration 15: Updating 28 edges...\n",
+      "  Iteration 16: Updating 16 edges...\n",
+      "  Iteration 17: Updating 6 edges...\n",
+      "  Iteration 18: Updating 2 edges...\n",
+      "  Iteration 19: Updating 1 edges...\n",
+      "  Completed in 19 iterations\n",
+      "Step 4: Cleaning up internal chain edges...\n",
+      "Step 5: Removing nodes...\n",
+      "  Deleted 738 nodes\n",
+      "Step 6: Cleaning up temporary tables...\n",
+      "Compression complete!\n",
+      "\n",
+      "Summary:\n",
+      "  Remaining nodes: 128\n",
+      "  Remaining edges: 176\n",
+      "\n",
+      "=== Graph Statistics ===\n",
+      "Total nodes: 128\n",
+      "Total edges: 176\n",
+      "Node types:\n",
+      "  final: 98\n",
+      "  standard: 29\n",
+      "  start: 1\n",
+      "\n",
+      "Done!\n",
+      "(1784,)\n",
+      "1784\n",
+      "torch.Size([100])\n",
+      "100\n",
+      "torch.Size([1784])\n",
+      "torch.Size([1784])\n",
+      "Building initial graph...\n",
+      "Initial graph built successfully\n",
+      "\n",
+      "=== Graph Statistics ===\n",
+      "Total nodes: 1892\n",
+      "Total edges: 2213\n",
+      "Node types:\n",
+      "  final: 199\n",
+      "  standard: 1692\n",
+      "  start: 1\n",
+      "\n",
+      "Creating indexes...\n",
+      "\n",
+      "Starting truncation...\n",
+      "Step 1: Identifying removable nodes...\n",
+      "  Found 1641 removable nodes\n",
+      "Step 2: Creating successor lookup table...\n",
+      "Step 3: Bypassing chains...\n",
+      "  Iteration 1: Updating 163 edges...\n",
+      "  Iteration 2: Updating 156 edges...\n",
+      "  Iteration 3: Updating 128 edges...\n",
+      "  Iteration 4: Updating 125 edges...\n",
+      "  Iteration 5: Updating 109 edges...\n",
+      "  Iteration 6: Updating 108 edges...\n",
+      "  Iteration 7: Updating 101 edges...\n",
+      "  Iteration 8: Updating 100 edges...\n",
+      "  Iteration 9: Updating 95 edges...\n",
+      "  Iteration 10: Updating 94 edges...\n",
+      "  Iteration 11: Updating 89 edges...\n",
+      "  Iteration 12: Updating 89 edges...\n",
+      "  Iteration 13: Updating 87 edges...\n",
+      "  Iteration 14: Updating 86 edges...\n",
+      "  Iteration 15: Updating 65 edges...\n",
+      "  Iteration 16: Updating 32 edges...\n",
+      "  Iteration 17: Updating 11 edges...\n",
+      "  Iteration 18: Updating 2 edges...\n",
+      "  Iteration 19: Updating 1 edges...\n",
+      "  Completed in 19 iterations\n",
+      "Step 4: Cleaning up internal chain edges...\n",
+      "Step 5: Removing nodes...\n",
+      "  Deleted 1641 nodes\n",
+      "Step 6: Cleaning up temporary tables...\n",
+      "Compression complete!\n",
+      "\n",
+      "Summary:\n",
+      "  Remaining nodes: 251\n",
+      "  Remaining edges: 572\n",
+      "\n",
+      "=== Graph Statistics ===\n",
+      "Total nodes: 251\n",
+      "Total edges: 572\n",
+      "Node types:\n",
+      "  final: 199\n",
+      "  standard: 51\n",
+      "  start: 1\n",
+      "\n",
+      "Done!\n",
+      "(2204,)\n",
+      "2204\n",
+      "torch.Size([100])\n",
+      "100\n",
+      "torch.Size([2204])\n",
+      "torch.Size([2204])\n",
+      "Building initial graph...\n",
+      "Initial graph built successfully\n",
+      "\n",
+      "=== Graph Statistics ===\n",
+      "Total nodes: 3213\n",
+      "Total edges: 4046\n",
+      "Node types:\n",
+      "  final: 299\n",
+      "  standard: 2913\n",
+      "  start: 1\n",
+      "\n",
+      "Creating indexes...\n",
+      "\n",
+      "Starting truncation...\n",
+      "Step 1: Identifying removable nodes...\n",
+      "  Found 2843 removable nodes\n",
+      "Step 2: Creating successor lookup table...\n",
+      "Step 3: Bypassing chains...\n",
+      "  Iteration 1: Updating 259 edges...\n",
+      "  Iteration 2: Updating 249 edges...\n",
+      "  Iteration 3: Updating 216 edges...\n",
+      "  Iteration 4: Updating 210 edges...\n",
+      "  Iteration 5: Updating 191 edges...\n",
+      "  Iteration 6: Updating 190 edges...\n",
+      "  Iteration 7: Updating 179 edges...\n",
+      "  Iteration 8: Updating 178 edges...\n",
+      "  Iteration 9: Updating 172 edges...\n",
+      "  Iteration 10: Updating 171 edges...\n",
+      "  Iteration 11: Updating 164 edges...\n",
+      "  Iteration 12: Updating 163 edges...\n",
+      "  Iteration 13: Updating 160 edges...\n",
+      "  Iteration 14: Updating 156 edges...\n",
+      "  Iteration 15: Updating 113 edges...\n",
+      "  Iteration 16: Updating 47 edges...\n",
+      "  Iteration 17: Updating 22 edges...\n",
+      "  Iteration 18: Updating 3 edges...\n",
+      "  Iteration 19: Updating 1 edges...\n",
+      "  Completed in 19 iterations\n",
+      "Step 4: Cleaning up internal chain edges...\n",
+      "Step 5: Removing nodes...\n",
+      "  Deleted 2843 nodes\n",
+      "Step 6: Cleaning up temporary tables...\n",
+      "Compression complete!\n",
+      "\n",
+      "Summary:\n",
+      "  Remaining nodes: 370\n",
+      "  Remaining edges: 1202\n",
+      "\n",
+      "=== Graph Statistics ===\n",
+      "Total nodes: 370\n",
+      "Total edges: 1202\n",
+      "Node types:\n",
+      "  final: 299\n",
+      "  standard: 70\n",
+      "  start: 1\n",
+      "\n",
+      "Done!\n",
+      "(2294,)\n",
+      "2294\n",
+      "torch.Size([100])\n",
+      "100\n",
+      "torch.Size([2294])\n",
+      "torch.Size([2294])\n",
+      "Building initial graph...\n",
+      "Initial graph built successfully\n",
+      "\n",
+      "=== Graph Statistics ===\n",
+      "Total nodes: 4657\n",
+      "Total edges: 6246\n",
+      "Node types:\n",
+      "  final: 399\n",
+      "  standard: 4257\n",
+      "  start: 1\n",
+      "\n",
+      "Creating indexes...\n",
+      "\n",
+      "Starting truncation...\n",
+      "Step 1: Identifying removable nodes...\n",
+      "  Found 4170 removable nodes\n",
+      "Step 2: Creating successor lookup table...\n",
+      "Step 3: Bypassing chains...\n",
+      "  Iteration 1: Updating 352 edges...\n",
+      "  Iteration 2: Updating 339 edges...\n",
+      "  Iteration 3: Updating 303 edges...\n",
+      "  Iteration 4: Updating 299 edges...\n",
+      "  Iteration 5: Updating 277 edges...\n",
+      "  Iteration 6: Updating 276 edges...\n",
+      "  Iteration 7: Updating 263 edges...\n",
+      "  Iteration 8: Updating 262 edges...\n",
+      "  Iteration 9: Updating 255 edges...\n",
+      "  Iteration 10: Updating 254 edges...\n",
+      "  Iteration 11: Updating 247 edges...\n",
+      "  Iteration 12: Updating 246 edges...\n",
+      "  Iteration 13: Updating 243 edges...\n",
+      "  Iteration 14: Updating 235 edges...\n",
+      "  Iteration 15: Updating 178 edges...\n",
+      "  Iteration 16: Updating 92 edges...\n",
+      "  Iteration 17: Updating 40 edges...\n",
+      "  Iteration 18: Updating 10 edges...\n",
+      "  Iteration 19: Updating 1 edges...\n",
+      "  Completed in 19 iterations\n",
+      "Step 4: Cleaning up internal chain edges...\n",
+      "Step 5: Removing nodes...\n",
+      "  Deleted 4170 nodes\n",
+      "Step 6: Cleaning up temporary tables...\n",
+      "Compression complete!\n",
+      "\n",
+      "Summary:\n",
+      "  Remaining nodes: 487\n",
+      "  Remaining edges: 2074\n",
+      "\n",
+      "=== Graph Statistics ===\n",
+      "Total nodes: 487\n",
+      "Total edges: 2074\n",
+      "Node types:\n",
+      "  final: 399\n",
+      "  standard: 87\n",
+      "  start: 1\n",
+      "\n",
+      "Done!\n",
+      "(2534,)\n",
+      "2534\n",
+      "torch.Size([100])\n",
+      "100\n",
+      "torch.Size([2534])\n",
+      "torch.Size([2534])\n",
+      "Building initial graph...\n",
+      "Initial graph built successfully\n",
+      "\n",
+      "=== Graph Statistics ===\n",
+      "Total nodes: 6278\n",
+      "Total edges: 8927\n",
+      "Node types:\n",
+      "  final: 499\n",
+      "  standard: 5778\n",
+      "  start: 1\n",
+      "\n",
+      "Creating indexes...\n",
+      "\n",
+      "Starting truncation...\n",
+      "Step 1: Identifying removable nodes...\n",
+      "  Found 5665 removable nodes\n",
+      "Step 2: Creating successor lookup table...\n",
+      "Step 3: Bypassing chains...\n",
+      "  Iteration 1: Updating 448 edges...\n",
+      "  Iteration 2: Updating 436 edges...\n",
+      "  Iteration 3: Updating 400 edges...\n",
+      "  Iteration 4: Updating 395 edges...\n",
+      "  Iteration 5: Updating 374 edges...\n",
+      "  Iteration 6: Updating 373 edges...\n",
+      "  Iteration 7: Updating 360 edges...\n",
+      "  Iteration 8: Updating 359 edges...\n",
+      "  Iteration 9: Updating 352 edges...\n",
+      "  Iteration 10: Updating 351 edges...\n",
+      "  Iteration 11: Updating 344 edges...\n",
+      "  Iteration 12: Updating 343 edges...\n",
+      "  Iteration 13: Updating 338 edges...\n",
+      "  Iteration 14: Updating 326 edges...\n",
+      "  Iteration 15: Updating 253 edges...\n",
+      "  Iteration 16: Updating 132 edges...\n",
+      "  Iteration 17: Updating 58 edges...\n",
+      "  Iteration 18: Updating 19 edges...\n",
+      "  Iteration 19: Updating 6 edges...\n",
+      "  Completed in 19 iterations\n",
+      "Step 4: Cleaning up internal chain edges...\n",
+      "Step 5: Removing nodes...\n",
+      "  Deleted 5665 nodes\n",
+      "Step 6: Cleaning up temporary tables...\n",
+      "Compression complete!\n",
+      "\n",
+      "Summary:\n",
+      "  Remaining nodes: 613\n",
+      "  Remaining edges: 3260\n",
+      "\n",
+      "=== Graph Statistics ===\n",
+      "Total nodes: 613\n",
+      "Total edges: 3260\n",
+      "Node types:\n",
+      "  final: 499\n",
+      "  standard: 113\n",
+      "  start: 1\n",
+      "\n",
+      "Done!\n"
      ]
     }
    ],
    "source": [
     "beta = 32\n",
-    "log_every = 3\n",
-    "iterations = 9\n",
+    "log_every = 2\n",
+    "iterations = 10\n",
     "samples_per_log = 100\n",
     "losses = []\n",
     "avg_rewards = []\n",
